--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
-            background-color: #4CAF50;
+            background-color: #747a7aff;
             color: white;
             border: none;
             border-radius: 5px;
         }
         button:hover {
-            background-color: #45a049;
+            background-color: #8a9191ff;
         }
     </style>
 </head>
