--- a/index.html
+++ b/index.html
@@ -37,6 +37,20 @@
     <h1>むぶを見つけろ！</h1>
     <canvas id="pixelCanvas" width="180" height="180"></canvas>
     <button onclick="generatePixelArt()">ドット絵を生成</button>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <img src="mubuhon" alt="Image" />
 
     <script>
         function generatePixelArt() {
